objects/TW1_Padroes_Inadimplencia__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ID_Acao_Aguardar_Pagamento__c</fullName>
        <label>ID Acao Aguardar Pagamento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Aguardar_Postergacao__c</fullName>
        <label>ID Acao Aguardar Postergacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Analisar_Inadimplencia__c</fullName>
        <label>ID Acao Analisar Inadimplência</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Analisar_Inclusao_Parcelas__c</fullName>
        <label>ID Ação Analisar Inclusão de Parcelas</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Analisar_Sinal_Aberto__c</fullName>
        <label>ID Ação Analisar Sinal Aberto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Buscar_Contato_Cliente__c</fullName>
        <label>ID Acao Buscar Contato Cliente</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Definir_Responsavel__c</fullName>
        <label>ID Acao Definir Responsavel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Distratar_Unidade__c</fullName>
        <label>ID Acao Distratar Unidade</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Gerar_Boleto__c</fullName>
        <label>ID Acao Gerar Boleto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Negociar_Inadimplencia__c</fullName>
        <label>ID Ação Negociar Inadimplência</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Notificar_Judicialmente__c</fullName>
        <label>ID Acao Notificar Judicialmente</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Realizar_Negociacao__c</fullName>
        <label>ID Acao Realizar Negociacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Acao_Registrar_Tratativa__c</fullName>
        <label>ID Acao Registrar Tratativa</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Tipo_Inadimplencia_Amigavel__c</fullName>
        <label>ID Tipo Inadimplência Amigável</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Tipo_Inadimplencia_Extrajudicial__c</fullName>
        <label>ID Tipo Inadimplência Extrajudicial</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Tipo_Inadimplencia_Judicial__c</fullName>
        <label>ID Tipo Inadimplência Judicial</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Acao_Analisar_Negociacao__c</fullName>
        <label>Id Acao Analisar Negociacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Tempo_Inadimplencia_Amigavel__c</fullName>
        <label>Tempo Inadimplência Amigável</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Tempo_Inadimplencia_Extrajudicial__c</fullName>
        <label>Tempo Inadimplência Extrajudicial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_parcelaNaoConciliada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parcela Não Conciliada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_qtdDiasVencimento__c</fullName>
        <label>Quantidade Dias Vencimento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_urlCallback__c</fullName>
        <label>URL Callback</label>
        <type>Url</type>
    </fields>
    <label>Padrões Inadimplência</label>
</CustomObject>